edited education column

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </tr>
   </table>
   <hr>
-  <h3>education !?</h3>
+  <h3>education</h3>
   <ul>
     <li>elementary school - meadows elemntary</li>
     <li>middle school - taylor middle</li>
